Fixed margin on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -210,11 +210,11 @@ button {
 }
 
 .title {
-  margin-bottom: 3px;
   font-size: 40px;
   letter-spacing: 0.1em;
   font-family: "Playfair Display" !important;
   font-weight: 400;
+  margin: 0 0.5em 2px 0.5em;
 }
 
 .source {
